# IndieStudio

./: CMakeLists.txt  README.md
EncryptTool/: CMakeLists.txt  main.cpp
EncryptTool/inc/: Decryption.hpp  Encryption.hpp  XMLReader.hpp
EncryptTool/src/: Decryption.cpp  Encryption.cpp  XMLReader.cpp
assets/: name.mtl
assets/config/: connexionBoard_object.xml  login_object.xml  menuPlay_object.xml  menu_object.xml  signup_object.xml
assets/fonts/font/: font.xml
cmake/: FindIrrlicht.cmake
inc/: MacroIndie.hpp
inc/Engine/: AError.hpp  CollisionSystem.hpp  Core.hpp  EventHandler.hpp  GenerateMap.hpp  LoadError.hpp  PathFinder.hpp  Window.hpp
inc/Game/: ChoosePlayer.hpp  ChoosePlayerNumber.hpp  CreateBoard.hpp  EndGame.hpp  Game.hpp  Intro.hpp  MultiplayerGame.hpp  Pause.hpp  SplashScreen.hpp
inc/banks/: ButtonBank.hpp  FormBank.hpp  ObjectBank.hpp  PictureBank.hpp
inc/connexion/: ConnexionBoard.hpp  ConnexionHandle.hpp  Login.hpp  Signup.hpp
inc/interface/: IConnexion.hpp  ISubMenu.hpp  IVisualObject.hpp
inc/menu/: Menu.hpp  MenuPlay.hpp  PlayHandle.hpp
inc/objects/: Animation.hpp  Armature.hpp  Bomb.hpp  Button.hpp  Explosion.hpp  Form.hpp  Ia.hpp  Music.hpp  Picture.hpp  Player.hpp  PowerUp.hpp  Sound.hpp  StaticObject.hpp  Text.hpp
src/: main.cpp
src/Engine/: AError.cpp  CMakeLists.txt  CollisionSystem.cpp  Core.cpp  EventHandler.cpp  GenerateMap.cpp  LoadError.cpp  PathFinder.cpp  Window.cpp
src/Game/: CMakeLists.txt  ChoosePlayer.cpp  ChoosePlayerNumber.cpp  CreateBoard.cpp  EndGame.cpp  Game.cpp  Intro.cpp  MultiplayerGame.cpp  Pause.cpp  SplashScreen.cpp
src/banks/: ButtonBank.cpp  CMakeLists.txt  FormBank.cpp  ObjectBank.cpp  PictureBank.cpp
src/connexion/: CMakeLists.txt  ConnexionBoard.cpp  Login.cpp  Signup.cpp
src/menu/: CMakeLists.txt  Menu.cpp  MenuPlay.cpp
src/objects/: Animation.cpp  Armature.cpp  Bomb.cpp  Button.cpp  CMakeLists.txt  Explosion.cpp  Form.cpp  Ia.cpp  Music.cpp  Picture.cpp  Player.cpp  PowerUp.cpp  Sound.cpp  StaticObject.cpp  Text.cpp
